# veripatch

./: .gitignore  LICENSE  README.md  pp.schema.json  pyproject.toml
.github/workflows/: ci.yml
docs/: policy-reference.md  proof-bundle-format.md  threat-model.md
examples/: pp.yaml
examples/failing_targets/: README.md  run_baseline.py  targets.json
examples/failing_targets/median_bug/: pp.json  stats_utils.py
examples/failing_targets/median_bug/tests/: test_stats.py
examples/failing_targets/name_error/: math_utils.py  pp.json
examples/failing_targets/name_error/tests/: test_math.py
examples/failing_targets/slugify_bug/: pp.json  text_utils.py
examples/failing_targets/slugify_bug/tests/: test_text.py
pp/: __init__.py  artifacts.py  attest.py  cli.py  config.py  context.py  minimize.py  models.py  patch.py  provenance.py  redaction.py  runner.py  session.py
pp/providers/: __init__.py  base.py  local.py  openai.py  openai_compatible.py  stub.py
tests/: test_attestation.py  test_cli_json.py  test_context.py  test_patch.py  test_policy_commands.py  test_providers.py  test_redaction.py  test_runner_auto.py  test_runner_container.py  test_session_context.py  test_session_smoke.py
