[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-and-prove"
version = "0.1.0"
description = "Policy-governed proof-carrying patch synthesis CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Patch & Prove Contributors"}]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = [
  "PyYAML>=6.0",
  "types-PyYAML>=6.0.12.20241230",
  "ruff>=0.11.0",
  "mypy>=1.14.0",
]

[project.scripts]
pp = "pp.cli:main"

[tool.setuptools]
packages = ["pp", "pp.providers"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["pp"]
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
